--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,11 @@
 {
     "name": "RED ODYSSEY",
-    "shortname": "RED ODYSSEY",
+    "short_name": "RED ODYSSEY",
     "start_url": ".",
     "background_color": "#414141",
     "theme_color": "#a8324a",
     "display": "fullscreen",
-    "icons": [{
-            "src": "/src/img/icon.png",
-            "sizes": "514x512",
-            "type": "image/png"
-        },
+    "icons": [
 
         {
             "src": "/src/img/icon-1x.png",
